*Empty MediaWiki Message*

--- a/როსტომ_გურიელი.mw
+++ b/როსტომ_გურიელი.mw
@@ -1,4 +1,4 @@
-'''როსტომ გურიელი''', გურიის მთავარი 1534-1566, [[მამია I გურიელი|მამია I გურიელის]] ძე. აქტიურად იბრძოდა თურქეთის აგრესიის წინააღმდეგ, მონაწილეობდა [[მურჯახეთის ბრძოლა 1535|მურჯახეთის]] ([[1535]]), [[ქარაღაქის ბრძოლა 1543|ქარაღაქის]] ([[1543]]) და [[სოხოისტის  ბრძოლა 1545|სოხოისტის]] ([[1545]]) ბრძოლებში. მურჯახეთის ბრძოლაში დახმარებისათვის იმერეთის მეფემ უბოძა სამცხის სამთავროს ნაწილი - აჭარა და ჭანეთი. როსტომ გურიელის საქმიანობით განრისხებულმა თურქებმა გურიაზე გაილაშქრეს. [[1547]] თურქთა ფლოტი გურიის სანაპიროს მიადგა, თურქებმა გონიოსა და ბათუმის მხარეები დაიკავეს. როსტომ გურიელმა დახმარება იმერეთის მეფისა და დადიანს. იმერეთის მეფის ინტრიგის გამო როსტომ გურიელი მტერს მარტო შეებრძოლა, დაამარცხა და მდინარე ჭოროხის გაღმა განდევნა. თურქებმა აჭარა და ჭანეთი მაინც შეინარჩუნეს, გონიოს ციხე გაამაგრეს და ტავიანთ ფორპოსტად აქციეს. მომდევნო ხანებში როსტომ გურიელი თურქებთან ბრძოლას განაგრძობდა და არც იმერეთის მეფეს ემორჩილებოდა.
+'''როსტომ გურიელი''', გურიის მთავარი 1534-1566, [[მამია I გურიელი|მამია I გურიელის]] ძე. აქტიურად იბრძოდა თურქეთის აგრესიის წინააღმდეგ, მონაწილეობდა [[მურჯახეთის ბრძოლა 1535|მურჯახეთის]] ([[1535]]), [[ქარაღაქის ბრძოლა 1543|ქარაღაქის]] ([[1543]]) და [[სოხოისტის  ბრძოლა 1545|სოხოისტის]] ([[1545]]) ბრძოლებში. მურჯახეთის ბრძოლაში დახმარებისათვის იმერეთის მეფემ უბოძა სამცხის სამთავროს ნაწილი - აჭარა და ჭანეთი. როსტომ გურიელის საქმიანობით განრისხებულმა თურქებმა გურიაზე გაილაშქრეს. [[1547]] თურქთა ფლოტი გურიის სანაპიროს მიადგა, თურქებმა გონიოსა და ბათუმის მხარეები დაიკავეს. როსტომ გურიელმა დახმარება იმერეთის მეფისა და დადიანს სთხოვა. იმერეთის მეფის ინტრიგის გამო როსტომ გურიელი მტერს მარტო შეებრძოლა, დაამარცხა და მდინარე ჭოროხის გაღმა განდევნა. თურქებმა აჭარა და ჭანეთი მაინც შეინარჩუნეს, გონიოს ციხე გაამაგრეს და ტავიანთ ფორპოსტად აქციეს. მომდევნო ხანებში როსტომ გურიელი თურქებთან ბრძოლას განაგრძობდა და არც იმერეთის მეფეს ემორჩილებოდა.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:გურიის მთავრები]]
