--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -1,15 +1,17 @@
 [[სურათი:85px-Bluetooth-logo.svg.png|thumb|]]
-'''Bluetooth'''-ი წარმოადგენს მონაცემთა გადაცემის უსადენო ტექნოლოგიას.იგი საშუალებას იძლევა გადაიცეს მონაცემები 720 Kbps სიჩქარით,ყოველგვარი დამაკავშირებელი სადენების გარეშე სხვა და სხვა ტიპის მოწყობილობებს შორის,როგორებიცაა: მობილური ტელეფონები,ჯიბის კომპიუტერები,კომპიუტერები,პრონტერები,ციფრული ფოტო აპარატები,მაცივრები,კონდიციონერები,მიკროტალღური ღუმელები და ა.შ.
-ტექნოლოგია აქტიურად გამოიყენება ბიზნესში,მედიცინაში და სხვა სფეროებში.მოქმედების რადიუსი განისაღზვრება 10 ან 100 მეტრით.განსახვავებით ინფრაწითელი პორტისაგან(iRda) Bluetooth-ის რადიოტალღები ბეტონისა და ლითინოს კონსტრუქციებს შორისაც აღწევს.დაკავშირებისას იქმნება ქსელი piconet და 7-8 მომხმარებელს შეუძლია ერთდროულად ჩაერთოს ქსელში.
-აპარატურულად Bluetooth არის პატარა ჩიპი,მაღალი სიძლიერის მიმღებ-გადამცემი,რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
+'''ბლუთუზი''' (ინგ. Bluetooth - ლურჯი კბილი) მონაცემთა გადაცემის უსადენო ტექნოლოგიას წარმოადგენს. იგი საშუალებას იძლევა გადაიცეს მონაცემები 720 Kbps სიჩქარით, ყოველგვარი დამაკავშირებელი სადენების გარეშე სხვადასხვა ტიპის მოწყობილობებს შორის, როგორებიცაა: მობილური ტელეფონები, ჯიბის კომპიუტერები, კომპიუტერები, პრონტერები, ციფრული ფოტო აპარატები, მაცივრები, კონდიციონერები, მიკროტალღური ღუმელები და ა.შ.
+
+ტექნოლოგია აქტიურად გამოიყენება ბიზნესში, მედიცინაში და სხვა სფეროებში. მოქმედების რადიუსი განისაღზვრება 10-დან 100 მეტრამდე. განსახვავებით ინფრაწითელი პორტისაგან (iRda) ბლუთუზის რადიოტალღები ბეტონისა და ლითინოს კონსტრუქციებს შორისაც აღწევს. დაკავშირებისას იქმნება ქსელი piconet და 7-8 მომხმარებელს შეუძლია ერთდროულად ჩაერთოს ქსელში.
+
+აპარატურულად Bluetooth არის პატარა ჩიპი, მაღალი სიძლიერის მიმღებ-გადამცემი, რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
 
 ==ისტორია==
 
-1994 წლის დასაწყისში კომპანია Ericsson Mobile Communications  შექმნა გამოსაცდელი ჯგუფი,რათა შეესწავლათ რამდენად შესაძლებელი იქნებოდა რადიოტალღების მეშვეობით მონაცემთა გადაცემა სხვადასხვა მოწყობილობებს შორის ახლო მანძილზე.კვლევის წარმატებით დამთავრების  შემდეგ,1998წელს შვედური კომპანიის ინიციატივითა და Nokia, IBM, Intel, Toshiba_სთან თანამშრომლობის შედეგად დაარსდაSpecial Interest Group.ამ ჯგუფმა აქტიურად დაიწყო Bluetooth-ის სტანდარტის შემუშავება.1998წლის მაისში ოფიციალურად გახდა ცნობილი უკაბელო კომუნიკაციის სტანდარტის შესახებ.
+1994 წლის დასაწყისში კომპანია ერიკსონმა  (Ericsson Mobile Communications)  შექმნა გამოსაცდელი ჯგუფი, რათა შეესწავლათ რადიოტალღების მეშვეობით მონაცემთა გადაცემის შესაძლებლობა სხვადასხვა მოწყობილობებს შორის ახლო მანძილზე. კვლევის წარმატებით დამთავრების  შემდეგ,1998 წელს შვედური კომპანიის ინიციატივითა და Nokia, IBM, Intel, Toshiba-სთან თანამშრომლობის შედეგად დაარსდა სპეციალური დაინტერესების ჯგუფი. ამ ჯგუფმა აქტიურად დაიწყო ბლუთუზის სტანდარტის შემუშავება. 1998 წლის მაისში უკაბელო კომუნიკაციის ახალი სტანდარტის შესახებ ოფიციალური განცხადება გაკეთდა.
 
 ==პროფილები==
 
-Bluetooth ტექნოლოგიას გააჩნია საკმაოდ ბევრი პროფილი.თითოეული პროფილის მხარდაჭერა Bluetooth-ით აღჭურვილ მოწყობილობას კიდევ უფრო მეტ შესაძლებლობას აძლევ მაქსიმალურად გამოყენებულ იქნეს ტექნოლოგიის შესაძლებლობები.
+ბლუთუზ ტექნოლოგია მრავალპროფილიანია. თითოეული პროფილის მხარდაჭერა ბლუთუზით აღჭურვილ მოწყობილობას კიდევ უფრო მეტ შესაძლებლობას აძლევ მაქსიმალურად გამოყენებულ იქნეს ტექნოლოგიის შესაძლებლობები.
 
 *GAP -Generic Access Profile 
 *SDAP-Service Discovery Application Profile 
