*Empty MediaWiki Message*

--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -1,9 +1,9 @@
-[[სურათი:85px-Bluetooth-logo.svg.png|thumb|]]
+[[სურათი:85px-Bluetooth-logo.svg.png|thumb|ბლუთუზის ლოგო]]
 '''ბლუთუზი''' (ინგ. Bluetooth - ლურჯი კბილი) მონაცემთა გადაცემის უსადენო ტექნოლოგიას წარმოადგენს. იგი საშუალებას იძლევა გადაიცეს მონაცემები 720 Kbps სიჩქარით, ყოველგვარი დამაკავშირებელი სადენების გარეშე სხვადასხვა ტიპის მოწყობილობებს შორის, როგორებიცაა: მობილური ტელეფონები, ჯიბის კომპიუტერები, კომპიუტერები, პრონტერები, ციფრული ფოტო აპარატები, მაცივრები, კონდიციონერები, მიკროტალღური ღუმელები და ა.შ.
 
 ტექნოლოგია აქტიურად გამოიყენება ბიზნესში, მედიცინაში და სხვა სფეროებში. მოქმედების რადიუსი განისაღზვრება 10-დან 100 მეტრამდე. განსახვავებით ინფრაწითელი პორტისაგან (iRda) ბლუთუზის რადიოტალღები ბეტონისა და ლითინოს კონსტრუქციებს შორისაც აღწევს. დაკავშირებისას იქმნება ქსელი piconet და 7-8 მომხმარებელს შეუძლია ერთდროულად ჩაერთოს ქსელში.
 
-აპარატურულად Bluetooth არის პატარა ჩიპი, მაღალი სიძლიერის მიმღებ-გადამცემი, რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
+აპარატურულად ბლუთუზი მცირე ზომის, მაღალი სიძლიერის მიმღებ-გადამცემი ჩიპია, რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
 
 ==ისტორია==
 
