*Empty MediaWiki Message*

--- a/Macintosh.mw
+++ b/Macintosh.mw
@@ -7,7 +7,7 @@
 ==თანამედროვე სერია==
 *[[მაკ მინი]] (Mac mini) - სამაგიდო - სამომხმარებლო - ამჟამად წარმოებაში არსებული ყველაზე იაფი მაკინტოშის მოდელი და ერთადერთი, რომელიც მონიტორის გარეშე იყიდება. სტანდარტულ [[G4 პროცესორი|G4 პროცესორზეა]].
 
-*[[აიმაკი]] (iMac) - სამაგიდო - სამომხმარებლო - ეპლის წამყვანი სამომხმარებლო სამაგიდო კომპიუტერია; მძლავრ [[G5 პროცესორი|G5 პროცესორზეა]]. მას თეთრი [[მაითი-მაუზი]] (უძლეველი თაგუნა), გამჭვირვალე თეთრი [[კლავიატურა]], [[ბლუთუზი|ბლუთუზი]] (Bluetooth) და [[ეარპორტი|ეარპორტ]] (AirPort) ბარათები, ასევე ჩაშენებული [[აისაიტი|აისაიტ]] (iSight) კამერა, ორმხრივი [[დვდ]] ჩამწერი და ადაპტორი მოჰყვება.
+*[[აიმაკი]] (iMac) - სამაგიდო - სამომხმარებლო - ეპლის წამყვანი სამომხმარებლო სამაგიდო კომპიუტერია; მძლავრ [[G5 პროცესორი|G5 პროცესორზეა]]. მას თეთრი [[მაითი-მაუზი]] (უძლეველი თაგუნა), გამჭვირვალე თეთრი [[კლავიატურა]], [[Bluetooth]] (Bluetooth) და [[ეარპორტი|ეარპორტ]] (AirPort) ბარათები, ასევე ჩაშენებული [[აისაიტი|აისაიტ]] (iSight) კამერა, ორმხრივი [[დვდ]] ჩამწერი და ადაპტორი მოჰყვება.
 
 *[[იმაკი]] (eMac) - სამაგიდო - საგანმანათლებლო - იაფი სამაგიდო მოდელია თავდაპირველად მხოლოდ განათლების სფეროს ბაზრისთვის განკუთვნილი. 04/06/04 – 12/10/05 განმავლობაში ყველასთვის იყო მისაწვდომი, თუმცა მას შემდეგ ისევ მხოლოდ განათლების დაწესებულებებისთვისაა ხელმისაწვდომი. მას ჩაშენებული [[ცრტ ეკრანი]] და G4 პროცესორი აქვს.
 
