*Empty MediaWiki Message*

--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -7,7 +7,7 @@
 
 ==ისტორია==
 
-1994 წლის დასაწყისში კომპანია ერიკსონმა  (Ericsson Mobile Communications)  შექმნა გამოსაცდელი ჯგუფი, რათა შეესწავლათ რადიოტალღების მეშვეობით მონაცემთა გადაცემის შესაძლებლობა სხვადასხვა მოწყობილობებს შორის ახლო მანძილზე. კვლევის წარმატებით დამთავრების  შემდეგ,1998 წელს შვედური კომპანიის ინიციატივითა და Nokia, IBM, Intel, Toshiba-სთან თანამშრომლობის შედეგად დაარსდა სპეციალური დაინტერესების ჯგუფი. ამ ჯგუფმა აქტიურად დაიწყო ბლუთუზის სტანდარტის შემუშავება. 1998 წლის მაისში უკაბელო კომუნიკაციის ახალი სტანდარტის შესახებ ოფიციალური განცხადება გაკეთდა.
+1994 წლის დასაწყისში კომპანია ერიქსონმა  (Ericsson Mobile Communications)  შექმნა გამოსაცდელი ჯგუფი, რათა შეესწავლათ რადიოტალღების მეშვეობით მონაცემთა გადაცემის შესაძლებლობა სხვადასხვა მოწყობილობებს შორის ახლო მანძილზე. კვლევის წარმატებით დამთავრების  შემდეგ,1998 წელს შვედური კომპანიის ინიციატივითა და Nokia, IBM, Intel, Toshiba-სთან თანამშრომლობის შედეგად დაარსდა სპეციალური დაინტერესების ჯგუფი. ამ ჯგუფმა აქტიურად დაიწყო ბლუთუზის სტანდარტის შემუშავება. 1998 წლის მაისში უკაბელო კომუნიკაციის ახალი სტანდარტის შესახებ ოფიციალური განცხადება გაკეთდა.
 
 ==პროფილები==
 
