*Empty MediaWiki Message*

--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -11,7 +11,7 @@
 
 ==პროფილები==
 
-ბლუთუზ ტექნოლოგია მრავალპროფილიანია. თითოეული პროფილის მხარდაჭერა ბლუთუზით აღჭურვილ მოწყობილობას კიდევ უფრო მეტ შესაძლებლობას აძლევ მაქსიმალურად გამოყენებულ იქნეს ტექნოლოგიის შესაძლებლობები.
+ბლუთუზ ტექნოლოგია მრავალპროფილიანია. თითოეული პროფილის მხარდაჭერა ბლუთუზით აღჭურვილ მოწყობილობას კიდევ უფრო მეტ შესაძლებლობას აძლევს მაქსიმალურად გამოყენებულ იქნეს ტექნოლოგიის შესაძლებლობები.
 
 *GAP -Generic Access Profile 
 *SDAP-Service Discovery Application Profile 
