--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -42,5 +42,39 @@
 ==რესურსები ინტერნეტში==
 *[http://http://bluetooth.com/bluetooth/ Bluetooth]
 *[http://http://bluetooth.org/ Bluetooth]
-*[http://http://http://bluetomorrow.com/ Bluetooth]
-*[http://http://palowireless.com/bluetooth/ Bluetooth]
+*[http://bluetomorrow.com/ Bluetooth]
+*[http://palowireless.com/bluetooth/ Bluetooth]
+
+[[კატეგორია:კომპიუტერული ქსელები]] 
+
+[[ar:بلوتوث]]
+[[zh-min-nan:Bluetooth]]
+[[ca:Bluetooth]]
+[[cs:Bluetooth]]
+[[da:Bluetooth]]
+[[de:Bluetooth]]
+[[en:Bluetooth]]
+[[el:Bluetooth]]
+[[es:Bluetooth]]
+[[fa:بلوتوث]]
+[[fr:Bluetooth]]
+[[gl:Bluetooth]]
+[[ko:블루투스]]
+[[it:Bluetooth]]
+[[he:שן כחולה]]
+[[lt:Bluetooth]]
+[[hu:Bluetooth]]
+[[nl:Bluetooth]]
+[[ja:Bluetooth]]
+[[no:Blåtann]]
+[[nn:Blåtann]]
+[[pl:Bluetooth]]
+[[pt:Bluetooth]]
+[[ru:Bluetooth]]
+[[sk:Bluetooth]]
+[[sl:Bluetooth]]
+[[fi:Bluetooth]]
+[[sv:Bluetooth]]
+[[vi:Bluetooth]]
+[[tr:Bluetooth]]
+[[zh:蓝牙]]
