--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -1,16 +1,14 @@
 [[სურათი:85px-Bluetooth-logo.svg.png|thumb|ბლუთუზის ლოგო]]
-'''ბლუთუზი''' (ინგ. Bluetooth - ლურჯი კბილი) მონაცემთა გადაცემის უსადენო ტექნოლოგიას წარმოადგენს. იგი საშუალებას იძლევა გადაიცეს მონაცემები 720 კბ/წმ სიჩქარით, ყოველგვარი დამაკავშირებელი სადენების გარეშე სხვადასხვა ტიპის მოწყობილობებს შორის, როგორებიცაა: მობილური ტელეფონები, ჯიბის კომპიუტერები, კომპიუტერები, პრინტერები, ციფრული ფოტოაპარატები, მაცივრები, კონდიციონერები, მიკროტალღური ღუმელები და ა.შ.
+'''ბლუთუზი''' (ინგ. Bluetooth - ლურჯი კბილი) მონაცემთა გადაცემის უსადენო ტექნოლოგიას წარმოადგენს. იგი საშუალებას იძლევა გადაიცეს მონაცემები 720 კბ/წმ სიჩქარით, ყოველგვარი დამაკავშირებელი სადენების გარეშე სხვადასხვა ტიპის მოწყობილობებს შორის, როგორებიცაა: მობილური ტელეფონები, ჯიბის კომპიუტერები, [[კომპიუტერი|კომპიუტერები]], [[პრინტერი|პრინტერები]], ციფრული ფოტოაპარატები, მაცივრები, კონდიციონერები, მიკროტალღური ღუმელები და ა.შ.
 
-ტექნოლოგია აქტიურად გამოიყენება ბიზნესში, მედიცინაში და სხვა სფეროებში. მისი მოქმედების რადიუსი განისაღზვრება 10-დან 100 მეტრამდე. განსახვავებით ინფრაწითელი პორტისაგან (iRda) ბლუთუზის რადიოტალღები ბეტონისა და ლითინოს კონსტრუქციებს შორისაც აღწევს. დაკავშირებისას იქმნება ქსელი piconet და 7-8 მომხმარებელს შეუძლია ერთდროულად ჩაერთოს ქსელში.
+ტექნოლოგია აქტიურად გამოიყენება [[ბიზნესი|ბიზნესში]], [[მედიცინა|მედიცინასა]] და სხვა სფეროებში. მისი მოქმედების რადიუსი განისაღზვრება 10-დან 100 მეტრამდე. განსახვავებით [[ინფრაწითელი გამოსხივება|ინფრაწითელი]] პორტისაგან (iRda) ბლუთუზის [[რადიოტალღა|რადიოტალღები]] ბეტონისა და ლითინოს კონსტრუქციებს შორისაც აღწევს. დაკავშირებისას იქმნება ქსელი piconet და 7-8 მომხმარებელს შეუძლია ერთდროულად ჩაერთოს მასში.
 
-აპარატურულად ბლუთუზი მცირე ზომის, მაღალი სიძლიერის მიმღებ-გადამცემი ჩიპია, რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
+აპარატურულად ბლუთუზი მცირე ზომის, მაღალი სიძლიერის მიმღებ-გადამცემი [[ჩიპი|ჩიპია]], რომელიც ISM (Industrial, Scientific and Medical) 2.4465-2.4835 GHz დიაპაზონში მუშაობს.
 
 ==ისტორია==
-
 1994 წლის დასაწყისში კომპანია ''ერიქსონმა'' (Ericsson Mobile Communications)  შექმნა გამოსაცდელი ჯგუფი, რათა შეესწავლათ რადიოტალღების მეშვეობით მონაცემთა გადაცემის შესაძლებლობა სხვადასხვა მოწყობილობებს შორის ახლო მანძილზე. კვლევის წარმატებით დამთავრების  შემდეგ,1998 წელს შვედური კომპანიის ინიციატივითა და Nokia, IBM, Intel, Toshiba-სთან თანამშრომლობის შედეგად დაარსდა სპეციალური დაინტერესების ჯგუფი. ამ ჯგუფმა აქტიურად დაიწყო ბლუთუზის სტანდარტის შემუშავება. 1998 წლის მაისში უკაბელო კომუნიკაციის ახალი სტანდარტის შესახებ ოფიციალური განცხადება გაკეთდა.
 
 ==პროფილები==
-
 ბლუთუზ ტექნოლოგია მრავალპროფილიანია. თითოეული პროფილის მხარდაჭერა ბლუთუზით აღჭურვილ მოწყობილობას კიდევ უფრო მეტ შესაძლებლობას აძლევს მაქსიმალურად გამოყენებულ იქნეს ტექნოლოგიის შესაძლებლობები.
 
 *GAP -Generic Access Profile 
