--- a/Macintosh.mw
+++ b/Macintosh.mw
@@ -5,7 +5,7 @@
 თავდაპირველი მაკინტოშის ოპერაციული სისტემა პირველი მაკის გამოშვებიდან მოყოლებული გამოიყენება, თუმცა მან დროთა ჟამის განმავლობაში დიდი ცვლილებები განიცადა. [[1999]] წელს ეპლის ჯგუფმა გადაწყიტა, რომ კლასიკურ მაკ ოს-ს აკლდა თანამედროვე კომპონენტები და გამოუშვა [[იუნიქსი|იუნიქსის]] (Unix) ბაზაზე დამუშავებული [[მაკ ოს X]] (Mac OS X), რომელიც გაცილებით სტაბილური სისტემა გახდა, თუმცა ამასთან კვლავ შესაძლებელი იყო კლასიკის აპლიკაციების გამოყენება ჩაშენებული კლასიკთან თავსებადი ინტერფეისის შრით. მაკ ოს X-ის თანამედროვე ვერსიაა v10.4 (ვეფხვი), რომელიც ყველა ახალ მაკინტოშს მოჰყვება როგორც სტანდარტული [[ოპერაციული სისტემა]] (ექს-სერვი მაკ ოს X სერვერის ვარიანტზეა). მაკინტოშის სრულყოფისათვის ეპლმა დამატებით გამოუშვა პროგრამული უზრუნველყოფა - ციფრული მედია-აპლიკაციების მთელი სერია - iLife (აი-ლაიფ) პაკეტი, iWork (აი-ვორკ) პაკეტი და პროფესიული კრეატიული ბაზრისთვის განკუთვნილი Final Cut Pro, Shake და Aperture პროგრამები.
 
 ==თანამედროვე სერია==
-*[[მაკ მინი]] (Mac mini) - სამაგიდო - სამომხმარებლო - ამჟამად წარმოებაში არსებული ყველაზე იაფი მაკინტოშის მოდელი და ერთადერთი, რომელიც მონიტორის გარეშე იყიდება. სტანდარტულ [[G4 პროცესორი|G4 პროცესორზეა]].
+*[[მაკ მინი]] (Mac mini) - სამაგიდო - სამომხმარებლო - ამჟამად წარმოებაში არსებული ყველაზე იაფი მაკინტოშის მოდელი და ერთადერთი, რომელიც მონიტორის გარეშე იყიდება. 2006 წლის თებერვლამდე სტანდარტულ [[G4 პროცესორი|G4 პროცესორზეა]], შემდეგ კი ინტელის ქორ ან ქორ-დუო პროცესორზე გადავიდა.
 
 *[[აიმაკი]] (iMac) - სამაგიდო - სამომხმარებლო - ეპლის წამყვანი სამომხმარებლო სამაგიდო კომპიუტერია; 2006 წლის იანვრიდან ინტელის მძლავრ [[ქორ-დუო პროცესორი|ქორ-დუო პროცესორზეა]]. მას თეთრი [[მაითი-მაუზი]] (უძლეველი თაგუნა), გამჭვირვალე თეთრი [[კლავიატურა]], [[ბლუთუზი|ბლუთუზისა]] (Bluetooth) და [[ეარპორტი|ეარპორტის]] (AirPort) ბარათები, ასევე ჩაშენებული [[აისაიტი|აისაიტ]] (iSight) კამერა, ორმხრივი [[დვდ]] ჩამწერი და ადაპტორი მოჰყვება.
 
