--- a/იუსუფ_I.mw
+++ b/იუსუფ_I.mw
@@ -1,6 +1,7 @@
-'''იუსუფ I''' ''ჯაყელი'', ახალციხის ფაშა [[1635]]-[[1647]]. საფარ-ფაშას ძე. ქართულ წყაროებში იგი ათაბაგად ან ფაშა-ათაბაგად  იხსენიება. XVII საუკუნის 20-30-იან წლებში, როცა [[მესხეთი]] [[სპარსეთი | სპარსეთსა]] და [[ოსმალეთი | ოსმალეთს]] შორის ხელიდან ხელში გადადიოდა, საფარ-ფაშა თურქეთი | თურქეთის ზონაში რჩებოდა ფაშად, ხოლო იუსუფ I - [[ირანი | ირანის]] ზონაში. ასე ინარჩუნებდნენ ისინი თავიანთ სამემკვიდრო უფლებას სამცხე-ჯავახეთში. 
+'''იუსუფ I''' ''ჯაყელი'', [[ახალციხის საფაშო|ახალციხის]] ფაშა [[1635]]-[[1647]]. საფარ-ფაშას ძე. ქართულ წყაროებში იგი ათაბაგად ან ფაშა-ათაბაგად  იხსენიება. XVII საუკუნის 20-30-იან წლებში, როცა [[მესხეთი]] [[სპარსეთი | სპარსეთსა]] და [[ოსმალეთი | ოსმალეთს]] შორის ხელიდან ხელში გადადიოდა, საფარ-ფაშა თურქეთი | თურქეთის ზონაში რჩებოდა ფაშად, ხოლო იუსუფ I - [[ირანი | ირანის]] ზონაში. ასე ინარჩუნებდნენ ისინი თავიანთ სამემკვიდრო უფლებას სამცხე-ჯავახეთში. 
 
 
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ახალციხის ფაშები]]
