*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_რ.mw
+++ b/ცნობილი_ქართველები:_რ.mw
@@ -64,8 +64,8 @@
 * [[რურუა, პარმენ]] - პოეტი
 * [[რურუა, რომან]] - სპორტსმენი
 * [[რუსთაველი]] - ჰუმანისტი პოეტი
-* [[რუსუდანი]] - საქართველოს მეფე
-* [[რუსუდანი XII საუკუნე ]]  - პოლიტიკური მოღვაწე და დიპლომატი
+* [[რუსუდანი ]] - საქართველოს მეფე
+* [[რუსუდანი (XII ს.) ]]  - პოლიტიკური მოღვაწე და დიპლომატი
 * [[რუხაძე, ალექსანდრე]] - ნევროპათოლოგი
 * [[რუხაძე, ვარლამ]] - პოეტი
 * [[რუხაძე, ზოია]] - პარტიზანი ქალი
