*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_რ.mw
+++ b/ცნობილი_ქართველები:_რ.mw
@@ -65,7 +65,7 @@
 * [[რურუა, რომან]] - სპორტსმენი
 * [[რუსთაველი]] - ჰუმანისტი პოეტი
 * [[რუსუდანი ]] - საქართველოს მეფე
-* [[რუსუდანი (XII ს.) ]]  - პოლიტიკური მოღვაწე და დიპლომატი
+* [[რუსუდანი (დიპლომატი) ]]  - პოლიტიკური მოღვაწე და დიპლომატი
 * [[რუხაძე, ალექსანდრე]] - ნევროპათოლოგი
 * [[რუხაძე, ვარლამ]] - პოეტი
 * [[რუხაძე, ზოია]] - პარტიზანი ქალი
