*Empty MediaWiki Message*

--- a/3_ოქტომბერი.mw
+++ b/3_ოქტომბერი.mw
@@ -14,6 +14,7 @@
 
 ==ამ დღეს გარდაცვლილნი==
 *[[1629]] : [[სააკაძე, გიორგი]] - საქართველოს პოლიტიკური და სამხედრო მოღვაწე
+* [[1629]] : [[სააკაძე, ავთანდილ]] -  გიორგი სააკაძის ვაჟი და თანამებრძოლი. 
 *[[1931]] : [[ნილსენი, კარლ]] - დანიელი კომპოზიტორი (დ.[[1865]])
 
 ==დღესასწაულები==
