--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -85,7 +85,7 @@
 
 == ებრაული ფილოსოფია ==
 
-ებრაული ფილოსოფია ფილოსოფიური დისციპლინისა და ებრაული თეოლოგიის გადაჯვარედინებას წარმოადგენს. შუა საუკუნეების ებრაელ ფილოსოფოსთა რიცხვს მიეკუთვნებიან [[საადია გაონი]], [[შლომო იბნ გაბიროლი]],  [[იეჰუდა ჰალევი]],  [[მოშე ბენ მაიმონი]] და  [[ლევი ბენ გერშომი]]. ებრაელთა განათლების მოძრაობამ (მე-18 საუკუნის მიწურულიდან მე-19 საუკუნის 80-ან წლებამდე) დიდი ცვლილებები მოახდინა ებრაულ ფილოსოფიაში; ეს ცვლილებები გამოხატეს განათლების მოძრაობის ფილოსოფიურად გამგრძელებელმა, ხოლო მოგვიანებით, თანამედროვე ხანის ისეთმა ფილოსოფოსებმა, როგორც [[მარტინ ბუბერი]], [[ფრანც როზენცვაიგი]], [[მორდეხაი კაპლანი]], [[აბრაჰამ ჯოშუა ჰეშელი]], [[ვილ ჰერბერგი]], [[იმანუელ ლევინასი]], [[რიჩარდ რუბინშტეინი]], [[ემილ ფაკენჰაიმი]] და [[იოსეფ სოლოვეიჩიკი]]. 
+ებრაული ფილოსოფია ფილოსოფიური დისციპლინისა და ებრაული თეოლოგიის გადაჯვარედინებას წარმოადგენს. შუა საუკუნეების ებრაელ ფილოსოფოსთა რიცხვს მიეკუთვნებიან [[საადია გაონი]], [[შლომო იბნ გაბიროლი]],  [[ჰალევი, იეჰუდა |იეჰუდა ჰალევი]],  [[მოშე ბენ მაიმონი]] და  [[ლევი ბენ გერშომი]]. ებრაელთა განათლების მოძრაობამ (მე-18 საუკუნის მიწურულიდან მე-19 საუკუნის 80-ან წლებამდე) დიდი ცვლილებები მოახდინა ებრაულ ფილოსოფიაში; ეს ცვლილებები გამოხატეს განათლების მოძრაობის ფილოსოფიურად გამგრძელებელმა, ხოლო მოგვიანებით, თანამედროვე ხანის ისეთმა ფილოსოფოსებმა, როგორც [[მარტინ ბუბერი]], [[ფრანც როზენცვაიგი]], [[მორდეხაი კაპლანი]], [[აბრაჰამ ჯოშუა ჰეშელი]], [[ვილ ჰერბერგი]], [[იმანუელ ლევინასი]], [[რიჩარდ რუბინშტეინი]], [[ემილ ფაკენჰაიმი]] და [[იოსეფ სოლოვეიჩიკი]].
 
 == ებრაული მიმდინარეობები ==
 
