--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -89,7 +89,7 @@
 
 == ებრაული მიმდინარეობები ==
 
-უკანასკნელი ორი საუკუნის განმავლობაში ებრაელები რამოდენიმე მიმდინარეობად დაიყვნენ. თითოეულ მათგანს სხვანაირად ესმის, თუ რა უნდა იყოს ებრაელისათვის აუცილებლად მისაღები რწმენის პრინციპები და როგორ უნდა იცხოვროს ადამიანმა ებრაელად. გარკვეულწილად, ამ დოქტრინულმა განსხვავებებმა განხეთქილება ჩამოაგდეს მათ შორის. მიუხედავად ამისა, გარკვეულ დონემდე ებრაული ერთობა შენარჩუნდა; კონსერვატორი ებრაელისათვის, მაგალითად, არ იქნება უჩვეულო მართლმადიდებლურ, ან რეფორმისტულ სინაგოგაში ილოცოს.
+უკანასკნელი ორი საუკუნის განმავლობაში ებრაელები რამოდენიმე მიმდინარეობად დაიყვნენ. თითოეულ მათგანს სხვანაირად ესმის, თუ რა უნდა იყოს ებრაელისათვის აუცილებლად მისაღები რწმენის პრინციპები და როგორ უნდა იცხოვროს ადამიანმა ებრაელად. გარკვეულწილად, ამ დოქტრინულმა განსხვავებებმა განხეთქილება ჩამოაგდეს მათ შორის. მიუხედავად ამისა, გარკვეულ დონემდე ებრაული ერთობა შენარჩუნდა; კონსერვატორი ებრაელისათვის, მაგალითად, არ იქნება უჩვეულო მართლმადიდებლურ, ან რეფორმისტულ [[სინაგოგა |სინაგოგაში]] ილოცოს.
 
 1) [[მართლმადიდებლური იუდაიზმი]] იმ აზრზე დგას, რომ თორა ღმერთმა შეადგინა, შემდეგ კი მოსეს უკარნახა, და ამიტომ თორის   კანონები დამავალებელი და უცვლელია. მართლმადიდებელ ებრაელებს [[შულხან არუხი]] ებრაული კანონის საბოლოო კოდიფიკაციად მიაჩნიათ. ისინი აგრეთვე ამტკიცებენ, რომ ჩვენი დროის მართლმადიდებლური იუდაიზმი განათლების მოძრაობამდე არსებული იუდაიზმიდან უშუალოდ გამომდინარეობს. მართლმადიდებელ ებრაელთა უმრავლესობა ებრაული თეოლოგიის ერთ-ერთ ფორმას აღიარებს, რომელიც მოშე ბენ მაიმონის ''სარწმუნოების ცამეტ პრინციპს'' ეყრდნობა. მართლმადიდებლურ ებრაელობას არაფორმალურად ორი სტილის მორწმუნეები შეადგენენ; მათ შორის არსებული განსხვავებები მიზეზია ორი მიდგომისა, რომელსაც [[თანამედროვე მართლმადიდებლური იუდაიზმი]] და [[ხარედული იუდაიზმი]] ანსახიერებენ ცალ-ცალკე. ფილოსოფიურად, ეს ორი ჯგუფი თანამედროვეობასთან შეგუების და აზროვნების არა-ებრაულ დისციპლინათა მნიშვნელოვანების საკითხებშია შეუთანხმებელი. პრაქტიკულ სფეროში, ამ ორი ჯგუფის ებრაელები ჩაცმის სტილით და რელიგიური წესებისათვის თავგამოდების დონით განსხვავდებიან ერთმანეთისგან. 
 
@@ -99,19 +99,19 @@
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი მნიშვნელოვანი  ჯგუფია. 
 
-2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციონალისტური) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაული სარწმუნოების პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
+2) [[კონსერვატიული იუდაიზმი]], რომელიც [[აშშ]]-ს გარეთ მასორეთული (ტრადიციონალისტური) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა [[ევროპა |ევროპასა]] და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაული სარწმუნოების პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
 
-კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი ზეპირ თორასაც საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.
+კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი [[ზეპირი თორა |ზეპირ თორასაც]] საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.
 
 3) [[პროგრესიული იუდაიზმი]] მრავალი მოძრაობისგან შესდგება, რომლებსაც რამოდენიმე ქვეყნის ებრაელთა შორის მრავალი მიმდევარი ჰყავთ.
 
-* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განსასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი ამკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან). 
+* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის [[გერმანია |გერმანიაში]] წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განსასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი ამკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. ([[დიდი ბრიტანეთი |დიდ ბრიტანეთში]], რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან). 
 
-* [[რეკონსტრუქსიონისტური იუდაიზმი]] თავდაპირველად ფილოსოფიურ მიმდინარეობად წარმოიშვა მე-20 საუკუნის კონსერვატორი რაბინის, მორდეხაი კაპლანის მიერ; მოგვიანებით, ის და მისი მიმდევრები გამოეყვნენ კონსერვატიულ იუდაიზმს და წამოიწყეს მოძრაობა, რომლის მიზანია იუდაიზმის ხელახალი ინტერპრეტაცია თანამედროვე კულტურასთან მის შესაფერებლად. რეფორმისტული იუდაიზმის მსგავსად, არც რეკონსტრუქციონისტური იუდაიზმი თვლის ებრაულ კანონებს დამავალებლად, მაგრამ რეფორმიზისაგან განსხვავებით, რეკონსტრუქციონისტური აზროვნება ხაზს უსვამს მორწმუნეთა თემების როლს იმის გადაწყვეტაში, თუ რომელ კანონებს უნდა დაემორჩილონ მათი წევრები.  
+* [[რეკონსტრუქსიონისტური იუდაიზმი]] თავდაპირველად ფილოსოფიურ მიმდინარეობად წარმოიშვა მე-20 საუკუნის კონსერვატორი რაბინის, [[მორდეხაი კაპლანი |მორდეხაი კაპლანის]] მიერ; მოგვიანებით, ის და მისი მიმდევრები გამოეყვნენ კონსერვატიულ იუდაიზმს და წამოიწყეს მოძრაობა, რომლის მიზანია იუდაიზმის ხელახალი ინტერპრეტაცია თანამედროვე კულტურასთან მის შესაფერებლად. რეფორმისტული იუდაიზმის მსგავსად, არც რეკონსტრუქციონისტური იუდაიზმი თვლის ებრაულ კანონებს დამავალებლად, მაგრამ რეფორმიზისაგან განსხვავებით, რეკონსტრუქციონისტური აზროვნება ხაზს უსვამს მორწმუნეთა თემების როლს იმის გადაწყვეტაში, თუ რომელ კანონებს უნდა დაემორჩილონ მათი წევრები.  
 
-4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო ჩრდილოეთ ამერიკაშია ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე ევროპაში, ლათინურ ამერიკაში და ისრაელშიც. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს). 
+4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო [[ჩრდილოეთ ამერიკა |ჩრდილოეთ ამერიკაშია]] ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე [[ევროპა |ევროპაში]], [[ლათინური ამერიკა |ლათინურ ამერიკაში]] და [[ისრაელი |ისრაელშიც]]. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს). 
 
-მართლმადიდებელ ებრაელთა უმრავლესობა ადამიანის ებრაელობას საზღვრავს არა იმით, თუ რომელი მიმდინარეობის მიმდევარია იგი, არამედ იმის მიხედვით, თუ რამდენად ახლოსაა მისი ღვთისმსახურების წესები მათ წესებთან. მართლმადიდებელ ებრაელთა აზრით, ებრაელი, რომელიც არ ასრულებს შაბათის, იომ-ტოვების (წმინდა დღეების), ქაშრუთისა და ოჯახური სიწმინდის კანონებს, მორწმუნედ არ უნდა ჩაითვალოს; ნებისმიერ ებრაელს, რომელიც თუნდაც, მხოლოდ ამ კანონებს შეასრულებს, ისინი ღვთის მსახურად და მორწმუნედ ჩათვლიან. 
+მართლმადიდებელ ებრაელთა უმრავლესობა ადამიანის ებრაელობას საზღვრავს არა იმით, თუ რომელი მიმდინარეობის მიმდევარია იგი, არამედ იმის მიხედვით, თუ რამდენად ახლოსაა მისი ღვთისმსახურების წესები მათ წესებთან. მართლმადიდებელ ებრაელთა აზრით, ებრაელი, რომელიც არ ასრულებს [[შაბათი |შაბათის]], იომ-ტოვების (წმინდა დღეების), [[ქაშრუთი |ქაშრუთისა]] და ოჯახური სიწმინდის კანონებს, მორწმუნედ არ უნდა ჩაითვალოს; ნებისმიერ ებრაელს, რომელიც თუნდაც, მხოლოდ ამ კანონებს შეასრულებს, ისინი ღვთის მსახურად და მორწმუნედ ჩათვლიან.
 
 == ებრაული სექტორები ისრაელში ==
 
