/* რა აქცევს ადამიანს ებრაელად? */

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -81,7 +81,7 @@
 
 ებრაელი, რომელიც წყვეტს ებრაული რჯულის ჩვეულებათა შესრულებას, მაინც ებრაელად ითვლება; ებრაული კანონით, არც ის ებრაელი უნდა გამოაკლდეს  ერს, ვინც ებრაული რწმენის პრინციპებს უარყოფს და აგნოსტიკურად, ან ათეისტურადაა განწყობილი. ამავე კანონით, სხვა სარწმუნოების  მიმღები ებრაელიც კი ებრაელად ითვლება, თუმცა ასეთ შემთხვევაში ადამიანი კარგავს ყოველგვარ სტატუსს ებრაულ თემში და გადარჯულებულის სახელს იმკვიდრებს. წარსულში, გადარჯულებული ებრაელის ოჯახი და მეგობრები მას ოფიციალურად გლოვობდნენ; ჩვენს დროში ეს ჩვეულება იშვიათია.
 
-საკითხი, თუ რა არის მთავარი ებრაელობის დახასიათებაში, მე-20 საუკუნის 50-ან წლებში ხელახლა წამოჭრა ისრაელის მაშინდელმა პრემიერ-მინისტრმა, დავიდ ბენ-გურიონმა, როდესაც მთელი მსოფლიოს ებრაელ სწალულებსა და რელიგიურ ლიდერებს სთხოვა, აზრი გამოეთქვათ კითხვაზე ''მიჰუ იეჰუდი?'' ([[ვინ არის ებრაელი?]]). ეს საკითხი, რომელიც მალე ვერ გადაიჭრება, მას შემდეგ ისრაელის პოლიტიკაში იჩენს ხოლმე თავს. 
+საკითხი, თუ რა არის მთავარი ებრაელობის დახასიათებაში, მე-20 საუკუნის 50-ან წლებში ხელახლა წამოჭრა [[ისრაელი |ისრაელის]] მაშინდელმა პრემიერ-მინისტრმა, [[დავიდ ბენ-გურიონი |დავიდ ბენ-გურიონმა]], როდესაც მთელი მსოფლიოს ებრაელ სწალულებსა და რელიგიურ ლიდერებს სთხოვა, აზრი გამოეთქვათ კითხვაზე ''მიჰუ იეჰუდი?'' ([[ვინ არის ებრაელი?]]). ეს საკითხი, რომელიც მალე ვერ გადაიჭრება, მას შემდეგ ისრაელის [[ პოლიტიკა |პოლიტიკაში]] იჩენს ხოლმე თავს.
 
 == ებრაული ფილოსოფია ==
 
