/* ებრაული სექტორები ისრაელში */

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -115,7 +115,7 @@
 
 == ებრაული სექტორები ისრაელში ==
 
-მიუხედავად იმისა, რომ ზემოთ აღწერილ ყოველ მიმდინარეობას [[ისრაელი |ისრაელშიც]] ჰყავს მიმდევრები, ამ ქვეყნის ებრაელები თავიანთ ვინაობას სხვა კატეგორიით საზღვრავენ, რომლითაც ადამიანები მორწმუნეობის დონის მიხედვით იყოფიან. ეს კატეგორიაა მიგზარი, ანუ, ამ შემთხვევაში, გარკვეული ჩვეულებების მქონე საზოგადოების სექტორი. ისრაელში, სამი ასეთი ძირითადი სექტორია: [[სეკულარიზმი |სეკულარისტი]] (''ხილონი''), [[ტრადიციონალიზმი |ტრადიციონალისტი]] (''მასორათი'') და [[რელიგია |რელიგიოზი]] (''დათი'' ან ''ხარედი'') ებრაელებისა. ხილონებად თავს მიიჩნევენ ძირითადად [[ევროპა |ევროპული]] წარმოშობის (არარელიგიოზი) ებრაელები, რომლებიც საკუთარ ებრაელობას, შესაძლოა, დიდ მნიშვნელობას ანიჭებენ, მაგრამ ებრაული ვინაობა მათ არა ჰგონიათ ტრადიციულ რწმენაზე და კანონებზე დამოკიდებული. ხილონები უარყოფენ რელიგიური ცხოვრების ყოველ ფორმას, მართლმადიდებლურს თუ დასავლეთში უფრო მიღებულ ლიბერალურს (რეფორმისტულს და კონსერვატიულს). მასორათი (ტრადიციონალისტ) ებრაელებად თავს თვლიან ძირითადად "აღმოსავლელი" ([[ახლო აღმოსავლეთი |ახლო აღმოსავლური]], ჩრდილო-[[აფრიკა |აფრიკული]] და [[შუა-აზია |შუა-აზიური]] წარმოშობის) არარელიგიოზი ებრაელები. (ამ მასორათი ებრაელებს არავითარი კავშირი არა აქვთ კონსერვატიული იუდაიზმის მიმდევრებთან, რომლებსაც ებრაულად აგრეთვე მასორათები ეწოდებათ).
+მიუხედავად იმისა, რომ ზემოთ აღწერილ ყოველ მიმდინარეობას [[ისრაელი |ისრაელშიც]] ჰყავს მიმდევრები, ამ ქვეყნის ებრაელები თავიანთ ვინაობას სხვა კატეგორიით საზღვრავენ, რომლითაც ადამიანები მორწმუნეობის დონის მიხედვით იყოფიან. ეს კატეგორიაა მიგზარი, ანუ, ამ შემთხვევაში, გარკვეული ჩვეულებების მქონე საზოგადოების სექტორი. ისრაელში, სამი ასეთი ძირითადი სექტორია: [[სეკულარიზმი |სეკულარისტი]] (''ხილონი''), [[ტრადიციონალიზმი |ტრადიციონალისტი]] (''მასორათი'') და [[რელიგია |რელიგიოზი]] (''დათი'' ან ''ხარედი'') ებრაელებისა. ხილონებად თავს მიიჩნევენ ძირითადად [[ევროპა |ევროპული]] წარმოშობის (არარელიგიოზი) ებრაელები, რომლებიც საკუთარ ებრაელობას, შესაძლოა, დიდ მნიშვნელობას ანიჭებენ, მაგრამ ებრაული ვინაობა მათ არა ჰგონიათ ტრადიციულ რწმენაზე და კანონებზე დამოკიდებული. ხილონები უარყოფენ რელიგიური ცხოვრების ყოველ ფორმას, მართლმადიდებლურს თუ დასავლეთში უფრო მიღებულ ლიბერალურს (რეფორმისტულს და კონსერვატიულს). მასორათი (ტრადიციონალისტ) ებრაელებად თავს თვლიან ძირითადად "აღმოსავლელი" ([[ახლო აღმოსავლეთი |ახლო აღმოსავლური]], ჩრდილო-[[აფრიკა |აფრიკული]] და შუა-[[აზია |აზიური]] წარმოშობის) არარელიგიოზი ებრაელები. (ამ მასორათი ებრაელებს არავითარი კავშირი არა აქვთ კონსერვატიული იუდაიზმის მიმდევრებთან, რომლებსაც ებრაულად აგრეთვე მასორათები ეწოდებათ).
 
 ამ ტერმინებს - ხილონი და მასორათი - ისრაელში მეტად მრავალმნიშვნელოვნად იყენებენ. ამის მიზეზი ისაა, რომ როგორც სეკულარისტთა, ისე ტრადიციონალისტთა მნიშვნელოვან ნაწილს, მათ შორის არსებული განსხვავებების მიუხედავად, არცთუ ცოტა საერთო თვისება ახასიათებს - როგორც იდეოლოგიურად, ისე ებრაული კანონების შესრულების მხრივ. (სეკულარისტთა უმრავლესობა თითქმის არასოდეს არ ლოცულობს, არც [[შაბათი |შაბათისა]] და [[ქაშრუთი |ქაშრუთის]], ანუ კვების, წესებს იცავს; მეორე მხრივ, სეკულარისტთა უმრავლესობა ტრადიციულად ასრულებს ჩვილ ვაჟთა [[ წინადაცვეთა |წინადაცვეთის]], საქორწილო ცერემონიის, მარხვა-გლოვის, [[ფესახი |ფესახში]] პურეული საკვების აღკვეთისა და [[ქიფურის დღე |ქიფურის დღის]] მარხულობის რელიგიურ წესებს. ტრადიციონალისტები, ბოლოს ჩამოთვლილი წესების გარდა, უფრო ხშირადაც ლოცულობენ, შაბათობით სინაგოგაში დადიან და ქაშრუთის კანონებს ასრულებენ; მიუხედავად ამისა, ტრადიციონალისტთა უმრავლესობა შაბათის ბევრ კანონს არღვევს და საერთოდ, სეკულარისტთა მსგავსად, ცხოვრების დასავლური სტილის მიმდევარია).    
   
