/* იუდაიზმის განვითარების ისტორიულ-კრიტიკული შეხედულება */

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -30,9 +30,9 @@
 
 == იუდაიზმის განვითარების ისტორიულ-კრიტიკული შეხედულება ==
 
-მიუხედავად მონოთეიზმის ფუძეულობისა რაბინულ (იგივე მართლმადიდებლურ ან ორთოდოქსალურ) იუდაიზმში, ბიბლიის კრიტიკულად მკვლევართა მტკიცებით თორის ზოგი ნაწყვეტი იმაზე მიუთითებს, რომ ადრეულ ისრაელიტებს სხვა ღმერთებიც სწამდათ, თუმცა თვით ღმერთი სამყაროს ერთადერთ შემქმნელად მიაჩნდათ, რომლის მსახურებაც სავალდებულოა (ეს ჰენოთეისტური შეხედულებაა). იუდაიზმისწინა პოლითეისტური რწმენის ახალი საბუთი უგარითის გათხრებში აღმოჩნდა, სადაც თიხის ფირფიტებზე ღმერთთა პანთეონის აღწერა იპოვეს, რომელთაგანაც ზოგი თორაშია ნახსენები. სწავლულთა უმეტესობის აზრით, ებრაელებმა მხოლოდ ელინისტურ ხანაში ირწმუნეს, რომ სამყაროს ერთადერთი ღმერთი  ჰყავს, რომელიც მთელი კაცობრიობის ღმერთიცაა და რომლის გამოცხადების საბუთი (თორა) უნივერსალურ ჭეშმარიტებას შეიცავს. თითქოს ეს გამოიხატება, ერთი მხრივ, უცხოელთა იუდაიზმით დაინტერესების ზრდაში (ბერძენთა და რომაელთა ნაწილი ებრაელებს ყველაზე "ფილოსოფიურ" ხალხად თვლიდა, რადგან მათ ვიზუალურად წარმოუდგენელი ღმერთი სწამდათ), ხოლო მეორე მხრივ, ებრალთა მზარდ დაინტერესებაში ბერძნული ფილოსოფიით, რომელიც უნივერსალური ჭეშმარიტების დადგენისაკენ მიილტვოდა და ამგვარად, შესაძლოა, მონოთეიზმის იდეამდეც მიიყვანა აზროვნება (თუნდაც იმ გაგებით, რომ "ყველა ღმერთი ერთია").
+მიუხედავად [[მონოთეიზმი |მონოთეიზმის]] ფუძეულობისა რაბინულ (იგივე მართლმადიდებლურ ან ორთოდოქსალურ) იუდაიზმში, ბიბლიის კრიტიკულად მკვლევართა მტკიცებით [[თორა |თორის]] ზოგი ნაწყვეტი იმაზე მიუთითებს, რომ ადრეულ ისრაელიტებს სხვა ღმერთებიც სწამდათ, თუმცა თვით [[ღმერთი]] სამყაროს ერთადერთ შემქმნელად მიაჩნდათ, რომლის მსახურებაც სავალდებულოა (ეს ჰენოთეისტური შეხედულებაა). იუდაიზმისწინა [[პოლითეიზმი |პოლითეისტური]] რწმენის ახალი საბუთი [[უგარითი |უგარითის]] გათხრებში აღმოჩნდა, სადაც თიხის ფირფიტებზე ღმერთთა პანთეონის აღწერა იპოვეს, რომელთაგანაც ზოგი თორაშია ნახსენები. სწავლულთა უმეტესობის აზრით, ებრაელებმა მხოლოდ [[ელინიზმი |ელინისტურ]] ხანაში ირწმუნეს, რომ სამყაროს ერთადერთი ღმერთი  ჰყავს, რომელიც მთელი კაცობრიობის ღმერთიცაა და რომლის გამოცხადების საბუთი ([[თორა]]) უნივერსალურ ჭეშმარიტებას შეიცავს. თითქოს ეს გამოიხატება, ერთი მხრივ, უცხოელთა იუდაიზმით დაინტერესების ზრდაში (ბერძენთა და რომაელთა ნაწილი ებრაელებს ყველაზე "ფილოსოფიურ" ხალხად თვლიდა, რადგან მათ ვიზუალურად წარმოუდგენელი ღმერთი სწამდათ), ხოლო მეორე მხრივ, ებრალთა მზარდ დაინტერესებაში [[ბერძნული ფილოსოფია |ბერძნული ფილოსოფიით]], რომელიც უნივერსალური ჭეშმარიტების დადგენისაკენ მიილტვოდა და ამგვარად, შესაძლოა, მონოთეიზმის იდეამდეც მიიყვანა აზროვნება (თუნდაც იმ გაგებით, რომ "ყველა ღმერთი ერთია").
 
-ამ თეორიის მიხედვით, ელინისტურ ხანაში ებრაელები საკუთარ რელიგიურ  პარტიკულარიზმსა და ამავე რელიგიის უნივერსალიზმს შორის არსებულ კონფლიქტს შეეჭიდნენ (რადგან თორის განკარგულებათა შესრულება მხოლოდ ებრაელებს ევალებათ, მაგრამ თვით თორა უნივერსალურ ჭეშმარიტებას შეიცავს). ეს გამოიხატა რელიგიურ რწმენათა და წესთა მთელ რიგში, რომელიც ეხება ვინაობას, ეთიკას, ადამიანთა ურთიერთობას ბუნებასთან და ღმერთთან, თანაც ამოწმებს და უპირატესობას ანიჭებს "განსხვავებებს"  - განსხვავებებს ებრაელთა და არა-ებრაელთა შორის, ებრაული ღვთისმსახურების სხვადასხვაობას ლოკალურობის მიხედვით, ერთი და იგივე სიტყვათა სხვადასხვანაირ ინტერპრეტაციას ტექსტებში, ტექსტებშივე არსებულ ურთიერთსაწინააღმდეგო შეხედულებებს (რომლებიც კოდიფიკაციით ინახებოდა). ამ განსხვავებათა დაცვის მიზეზი, რომლის შედეგიც რწმენის ერთიანი დოგმის მიუღებლობა იყო, ზემოთაღნიშნულ კონფლიქტში უნდა ვეძიოთ.
+ამ თეორიის მიხედვით, ელინისტურ ხანაში ებრაელები საკუთარ რელიგიურ  პარტიკულარიზმსა და ამავე [[რელიგია |რელიგიის]] უნივერსალიზმს შორის არსებულ კონფლიქტს შეეჭიდნენ (რადგან თორის განკარგულებათა შესრულება მხოლოდ ებრაელებს ევალებათ, მაგრამ თვით თორა უნივერსალურ ჭეშმარიტებას შეიცავს). ეს გამოიხატა რელიგიურ რწმენათა და წესთა მთელ რიგში, რომელიც ეხება ვინაობას, [[ეთიკა |ეთიკას]], ადამიანთა ურთიერთობას ბუნებასთან და ღმერთთან, თანაც ამოწმებს და უპირატესობას ანიჭებს "განსხვავებებს"  - განსხვავებებს ებრაელთა და არა-ებრაელთა შორის, ებრაული ღვთისმსახურების სხვადასხვაობას ლოკალურობის მიხედვით, ერთი და იგივე სიტყვათა სხვადასხვანაირ ინტერპრეტაციას ტექსტებში, ტექსტებშივე არსებულ ურთიერთსაწინააღმდეგო შეხედულებებს (რომლებიც კოდიფიკაციით ინახებოდა). ამ განსხვავებათა დაცვის მიზეზი, რომლის შედეგიც რწმენის ერთიანი დოგმის მიუღებლობა იყო, ზემოთაღნიშნულ კონფლიქტში უნდა ვეძიოთ.
 
 ბიბლიისადმი მართლმადიდებლური იუდაიზმის მიდგომისაგან განსხვავებით, ბიბლიის კრიტიკულად მკვლევართა აზრით თორა მრავალი ურთიერთშეუფერებელი ტექსტისგან შესდგება, რომელთა გვიანი რედაქტირება ერთი და იგივე მონათხრობების სხვადასხვანაირი გადმოცემით იპყრობს ყურადღებას (ე.წ. დოკუმენტური ჰიპოთეზა).
 
