--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -65,15 +65,15 @@
 
 == ებრაული კანონი და ინტერპრეტაცია ==
 
-ებრაული კანონისა და ჰალახის (ტრადიციული ყოფის) საფუძველი თორაა (მოსეს ხუთი წიგნი). რაბინული ლიტერატურის მიხედვით თორაში ღვთის 613 კანონია მოცემული. აქედან, ზოგი მხოლოდ მამაკაცებზე ან ქალებზე ვრცელდება, ზოგი მხოლოდ ძველი სასულიერო  წოდების ადამიანებისათვის (ქურუმებისა და ლევიებისათვის) დადგინდა, ზოგი კი იმათთვის, ვინც ისრაელის მიწაზე სოფლის მეურნეობას ეწევა. მრავალი კანონის შესრულება მხოლოდ იერუსალიმის ტაძრის არსებობისას იყო შესაძლებელი. დღევანდელ ღვთისმსახურებაში, სამასზე ნაკლებ კანონს აქვს ძალა.
+ებრაული კანონისა და [[ჰალახა |ჰალახის]] (ტრადიციული ყოფის) საფუძველი [[თორა |თორაა]] (მოსეს ხუთი წიგნი). რაბინული ლიტერატურის მიხედვით თორაში ღვთის 613 კანონია მოცემული. აქედან, ზოგი მხოლოდ მამაკაცებზე ან ქალებზე ვრცელდება, ზოგი მხოლოდ ძველი სასულიერო  წოდების ადამიანებისათვის (ქურუმებისა და ლევიებისათვის) დადგინდა, ზოგი კი იმათთვის, ვინც [[ისრაელი |ისრაელის]] მიწაზე სოფლის მეურნეობას ეწევა. მრავალი კანონის შესრულება მხოლოდ [[იერუსალიმი |იერუსალიმის]] ტაძრის არსებობისას იყო შესაძლებელი. დღევანდელ ღვთისმსახურებაში, სამასზე ნაკლებ კანონს აქვს ძალა.
 
-არსებობდნენ ებრაელთა ისეთი ჯგუფები, ([[კარაიტები]] და [[ცედუკები]]) რომელთა მტკიცებით ისინი მხოლოდ დაწერილ თორას ეყრდნობოდნენ ღვთისმსახურებაში, მაგრამ ებრაელთა უმრავლესობას სწამდა ე.წ. ზეპირი თორაც. ეს  ზეპირი  ტრადიციები თავდაპირველად ძველებრაულ ფერუშების სექტაში გადაეცემოდა თაობიდან თაობას, ხოლო მოგვიანებით ჩაწერილ იქნა და რაბინებს შორის გავრცელდა. 
+არსებობდნენ ებრაელთა ისეთი ჯგუფები, ([[კარაიზმი |კარაიტები]] და [[ცედუკები]]) რომელთა მტკიცებით ისინი მხოლოდ დაწერილ თორას ეყრდნობოდნენ ღვთისმსახურებაში, მაგრამ ებრაელთა უმრავლესობას სწამდა ე.წ. [[ზეპირი თორა |ზეპირი თორაც]]. ეს  ზეპირი  ტრადიციები თავდაპირველად ძველებრაულ ფერუშების სექტაში გადაეცემოდა თაობიდან თაობას, ხოლო მოგვიანებით ჩაწერილ იქნა და რაბინებს შორის გავრცელდა. 
 
-რაბინული იუდაიზმი ყოველთვის თვლიდა, რომ თანახის წიგნები (დაწერილი თორა) ზეპირი ტრადიციის პარალერულად გადაეცემოდა თაობიდან თაობას; ამ შეხედულების გასამართლებლად, ებრაელები მიუთითებენ თვით თორის ტექსტზე, სადაც ბევრი სიტყვა გაურკვეველია, ხოლო მრავალი რელიგიური კანონი მოცემულია აუხსნელად, ან მის შესასრულებლად საჭირო დარიგების გარეშე. ებრაელთა მტკიცებით, ეს იმას ნიშნავს, რომ დაწერილი თორის მკითხველს უთუოდ უნდა სცოდნოდა დეტალები სხვა, ე.ი. ზეპირი წყაროდან.  რადგან ეს პარალერული ცოდნა თავდაპირველად ზეპირ გადმოცემას წარმოადგენდა, მას ''ზეპირი თორა'' (תורה שגעל-פה, თორა შე'ბე'ალ-პე) ეწოდა. ებრაელები ზეპირ თორასაც სინაის მთაზე მიღებულ ღვთიურ ძღვნად მიიჩნევენ.  
+რაბინული იუდაიზმი ყოველთვის თვლიდა, რომ თანახის წიგნები (დაწერილი თორა) ზეპირი ტრადიციის პარალერულად გადაეცემოდა თაობიდან თაობას; ამ შეხედულების გასამართლებლად, ებრაელები მიუთითებენ თვით თორის ტექსტზე, სადაც ბევრი სიტყვა გაურკვეველია, ხოლო მრავალი რელიგიური კანონი მოცემულია აუხსნელად, ან მის შესასრულებლად საჭირო დარიგების გარეშე. ებრაელთა მტკიცებით, ეს იმას ნიშნავს, რომ დაწერილი თორის მკითხველს უთუოდ უნდა სცოდნოდა დეტალები სხვა, ე.ი. ზეპირი წყაროდან.  რადგან ეს პარალერული ცოდნა თავდაპირველად ზეპირ გადმოცემას წარმოადგენდა, მას [[ზეპირი თორა]] (תורה שגעל-פה, თორა შე'ბე'ალ-პე) ეწოდა. ებრაელები ზეპირ თორასაც სინაის მთაზე მიღებულ ღვთიურ ძღვნად მიიჩნევენ.  
 
-იერუსალიმის მეორე აოხრებიდან რაბინი იეჰუდა ჰა'ნასის დრომდე (ჩვ. წელთაღრიცხვით 70-200 წწ) ზეპირი თორის უმეტესი ნაწილი რედაქტირებულ იქნა ''მიშნაში''. მომდევნო ოთხ საუკუნეში მიშნეული ზეპირი თორა რაბინული მსჯელობისა და კამათის საგანი იყო ძველი მსოფლიოს ორივე ებრაულ თემში: ისრაელსა და ბაბილონში. ამ ორი თემის რაბინთა კომენტარები მიშნაზე საბოლოოდ რედაქტირებულ იქნენ ორ ''თალმუდში'' ([[ბაბილონური თალმუდი]] და [[იერუსალიმის თალმუდი]]). მომდევნო საუკუნეების განმავლობაში, ორივე თალმუდს მრავალი თაობის თორის სწავლულთა კომენტარები დაერთო. ირკვევა, რომ [[ჰალახა]] - რაბინების ნაკარნახევი ებრაული ცხოვრების წესი, ეყრდნობა როგორც დაწერილ თორას, ისე ზეპირ ტრადიციებს (მიშნას, ჰალახურ მიდრაშს, თალმუდებს და მათ კომენტარებს). ჰალახა, პრეცედენტებიდან გამომდინარე, ნელა ვითარდებოდა.
+იერუსალიმის მეორე აოხრებიდან რაბინი იეჰუდა ჰა'ნასის დრომდე (ჩვ. წელთაღრიცხვით 70-200 წწ) ზეპირი თორის უმეტესი ნაწილი რედაქტირებულ იქნა [[მიშნა |''მიშნაში'']]. მომდევნო ოთხ საუკუნეში მიშნეული ზეპირი თორა რაბინული მსჯელობისა და კამათის საგანი იყო ძველი მსოფლიოს ორივე ებრაულ თემში: [[ისრაელი |ისრაელსა]] და [[ბაბილონი |ბაბილონში]]. ამ ორი თემის რაბინთა კომენტარები მიშნაზე საბოლოოდ რედაქტირებულ იქნენ ორ [[თალმუდი |''თალმუდში'']] ([[ბაბილონური თალმუდი]] და [[იერუსალიმის თალმუდი]]). მომდევნო საუკუნეების განმავლობაში, ორივე თალმუდს მრავალი თაობის თორის სწავლულთა კომენტარები დაერთო. ირკვევა, რომ [[ჰალახა]] - რაბინების ნაკარნახევი ებრაული ცხოვრების წესი, ეყრდნობა როგორც დაწერილ თორას, ისე ზეპირ ტრადიციებს (მიშნას, ჰალახურ მიდრაშს, თალმუდებს და მათ კომენტარებს). ჰალახა, პრეცედენტებიდან გამომდინარე, ნელა ვითარდებოდა.
 
-რაბინებისადმი მიმართულ წერით შეკითხვებს კანონებზე, და მათ პასუხებს, [[რესპონსა]] (ებრაულად ''შე'ელოთ უ'თშუვოთ'') ეწოდება. დროთა განმავლობაში, რაც უფრო გავრცელდა ეს ჩვეულება, შეიქმნა რესპონსაზე დაყრდნობილი ებრაული რელიგიური კანონის კოდექსები; მათ შორის ყველაზე მნიშვნელოვანი კოდექსი - [[შულხან არუხი]], მორწმუნე ებრაელთათვის დღემდე წარმოადგენს ერთგვარ ჰალახურ ანბანს. 
+რაბინებისადმი მიმართულ წერით შეკითხვებს კანონებზე, და მათ პასუხებს, [[რესპონსა]] (ებრაულად ''შე'ელოთ უ'თშუვოთ'') ეწოდება. დროთა განმავლობაში, რაც უფრო გავრცელდა ეს ჩვეულება, შეიქმნა რესპონსაზე დაყრდნობილი ებრაული რელიგიური კანონის კოდექსები; მათ შორის ყველაზე მნიშვნელოვანი კოდექსი - [[შულხან არუხი]], მორწმუნე ებრაელთათვის დღემდე წარმოადგენს ერთგვარ ჰალახურ ანბანს.
 
 == რა აქცევს ადამიანს ებრაელად? ==
 
