*Empty MediaWiki Message*

--- a/თამარი_(მრავალმნიშვნელოვანი).mw
+++ b/თამარი_(მრავალმნიშვნელოვანი).mw
@@ -1,9 +1,9 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' თამარ ''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 * [[თამარ ბატონიშვილი]] - ერეკლე მეფის შვილიშვილი
 * [[თამარი]] - საქართველოს მეფე
-* [[თამარი, გურჯი-ხათუნი]] - საქართველოს მეფის რუსუდანის ასული
-* [[თამარი, თეიმურაზ II-ის მეუღლე]] - ვახტანგ VI-ის ასული
+* [[თამარი (გურჯი-ხათუნი)]] - საქართველოს მეფის რუსუდანის ასული
+* [[თამარი (თეიმურაზ II-ის მეუღლე)]] - ვახტანგ VI-ის ასული
+
+{{მრავალმნიშვნელოვანი}}
