--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''თამარ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[თამარ]]
+|}</small>
+
 '''თამარი''' (დაახლოებით [[1160]]-[[1213]], სხვა ცნობებით, [[1210]], [[1207]]), [[საქართველო|საქართველოს]] მეფე [[1184]]-იდან, [[გიორგი III|გიორგი III-ის]] ასული. გიორგი III-მ თანამოსაყდრედ აკურთხა. [[1184]]-იდან, გიორგი III-ის გარდაცვალების შემდეგ, ერთმმართველი გახდა. მისი გამეფებისთანავე ფეოდალურმა არისტოკრატიამ დაიწყო ბრძოლა დაკარგული პოლიტიკური პრივილეგიების აღსადგენად. უპირველეს ყოვლისა მათ თამარი ხელახლა აკურთხეს მეფედ, რითაც ხაზი გაუსვეს თავიანთ უფლებებს. თამარი იძულებული გახდა ზოგი რამ დაეთმო: გადააყენა გიორგი III-ის მიერ აღზევებული უერთგულესი მოხელეები ამირსპასალარ-მანდატურთუხუცესი [[ყუბასარი]] და მსახურთუხუცესი [[აფრიდონი]]. ამის შემდეგ მეფის ხელისუფლების შეზღუდვის მოთხოვნით გამოვიდა მეჭურჭლეთუხუცეს [[ყუთლუ-არსლანი|ყუთლუ-არსლანის]] დასი. [[1185]] გავლენიან ფეოდალთა ერთმა ჯგუფმა თამარს მისი სურვილის წინააღმდეგ შერთო [[ანდრია ბოგოლიუბსკი|ანდრია ბოგოლიუბსკის]] შვილი იური (გიორგი). ორი-ორნახევრი წლის შემდეგ თამარი განქორწინდა და იური საქართველოდანაც განდევნეს. იურის მოწვევისა და შემდეგ განდევნის მიზეზი უნდა იყოს მეფისა და მისი მოწინააღმდეგე ფეოდალების დაჯგუფებათა ინტერესების დაპირისპირება და ის შინაკლასობრივი ბრძოლა, რომელიც თამარის მეფობის პირველ წლებში გამწვავდა. პირველ დამარცხებათა შემდეგ თამარმა თანდათან განიმტკიცა პოზიციები და მაღალ თანამდებობაზე თავისი მომხრეები დააწინაურა. დაახლოებით [[1189]] (ან [[1187]]) იქორწინა [[დავით სოსლანი|დავით სოსლანზე]], რომლისგანაც შეეძინა ორი შვილი - [[გიორგი IV ლაშა|ლაშა]] და [[რუსუდანი]].
 
 [[image:Georgia-Tamar.jpg|thumb|left|თამარ მეფე]]
