*Empty MediaWiki Message*

--- a/დვალები.mw
+++ b/დვალები.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დვალი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დვალი]]
+|}</small>
+
 '''დვალები''', ქართველი კალიგრაფები. მოღვაწეობდნენ მეტწილად [[იერუსალიმი|იერუსალიმის]] [[ჯვარი (იერუსალიმი) |ჯვრის მონასტერში]],[[ სინის მთა|სინის მთაზე]] და უცხოეთში მოქმედ სხვა ქართულ მონასტრებში, ზოგიერთი - საქართველოში.
 
 ''იოანე დვალი'' ცხოვრობდა XI საუკუნეში. მას გადაუწერია "თვენი" ([[ცაგარელი, ალექსანდრე|ა. ცაგარლის]] კატალოგი №36). [[1055]] მანვე გადაწერა "წმინდა ბასილის ცხოვრება" (ა. ცაგარლის კატალოგი №105), რომელშიც დაწერილია ნუსხურით, ლამაზი ხელით, შემკულია მშვენიერი თავსამკაულებითა და საზედაო ასოებით.
