*Empty MediaWiki Message*

--- a/დიმიტრი.mw
+++ b/დიმიტრი.mw
@@ -1,8 +1,9 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' დიმიტრი''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 * [[დიმიტრი ბატონიშვილი, XV ს.]] - კახეთის სამეფოს სახელმწიფო მოღვაწე
-* [[დიმიტრი ბატონიშვილი]] - ერეკლე II-ის შვილიშვილი
+* [[დიმიტრი ბატონიშვილი (XVIII)]] - ერეკლე II-ის შვილიშვილი
 * [[დიმიტრი თავდადებული]]
+
+
+{{მრავალმნიშვნელოვანი}}
