*Empty MediaWiki Message*

--- a/დიმიტრი.mw
+++ b/დიმიტრი.mw
@@ -1,8 +1,8 @@
 საკუთარი სახელი ''' დიმიტრი''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
-* [[დიმიტრი ბატონიშვილი, XV ს.]] - კახეთის სამეფოს სახელმწიფო მოღვაწე
-* [[დიმიტრი ბატონიშვილი (XVIII)]] - ერეკლე II-ის შვილიშვილი
+* [[დიმიტრი ბატონიშვილი (XV ს.)]] - კახეთის სამეფოს სახელმწიფო მოღვაწე
+* [[დიმიტრი ბატონიშვილი (XVIII ს.)]] - ერეკლე II-ის შვილიშვილი
 * [[დიმიტრი თავდადებული]]
 
 
