*Empty MediaWiki Message*

--- a/დომენტი.mw
+++ b/დომენტი.mw
@@ -1,6 +1,9 @@
-{{მრავალმნიშვნელოვანი}}
+საკუთარი სახელი '''დომენტი''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 * [[დომენტი I ]]  - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[დომენტი II]]  - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[დომენტი III]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[დომენტი IV]]  - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+
+
+{{მრავალმნიშვნელოვანი}}
