*Empty MediaWiki Message*

--- a/დომენტი_I.mw
+++ b/დომენტი_I.mw
@@ -1,8 +1,12 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დომენტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დომენტი]]
+|}</small>
+
 '''დომენტი I''', აღმოსავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1556]]-[[1560]] წლებში. ენერგიულად ზრუნავდა მცხეთის საპატრიარქოს ეკონომიურ მდგომარეობის ამაღლებისათვის, მნიშვნელოვნად გააფართოვა მისი მამულები.
 
 
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
