*Empty MediaWiki Message*

--- a/დომენტი_II.mw
+++ b/დომენტი_II.mw
@@ -1,8 +1,11 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დომენტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დომენტი]]
+|}</small>
+
 '''დომენტი II''', აღმოსავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] XVI საუკუნის მიწურულს. მისი ინიციატივით [[1595]] წელს მცხეთის საპატრიარქოს დაუბრუნდა მსხვილი მამულები, რომლებიც ადრე საერო ფეოდალებს ჰქონდათ მიტაცებული.
 
 
 
 [[კატეგორია:ქართველები]]
-
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
