--- a/დომენტი_III.mw
+++ b/დომენტი_III.mw
@@ -1,4 +1,9 @@
-'''დომენტი III''' (― †   [[სექტემბერი]], [[1676]], [[მცხეთა]]), აღმოსავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1660]]-[[1676]] წლებში, ქაიხოსრო მუხრანბატონის ძე. იყო ქართლის მეფის ვახტანგ V-ის პოლიტიკის მიმდევარი. ენერგიულად იბრძოდა ტყვეებით მოვაჭრე თავადთა წინააღმდეგ. მუსლიმანურ წეს-ჩვეულებათა საპირისპიროდ ცდილობდა ქართული ქრისტიანული ჩვეულებების აღდგენას. [[1664]] წელს თბილისელი ვაჭრისაგან შეიძინა სამცხიდან ჩამოტანილი ანჩის ხატი და თბილისის ანჩისხატის ეკლესიაში დაასვენა. მანვე შეაკეთა და განაახლა ანჩისხატის ეკლესია, [[1675]] წელს ააგო ახალი სამრეკლო. სვეტიცხოვლის საკათედრო ტაძრისთვის ნასყიდობით შეიძინა სახნავ-სათესი მიწები და რამდენიმე კომლი გლეხი.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დომენტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დომენტი]]
+|}</small>
+
+'''დომენტი III''' ( †   [[სექტემბერი]], [[1676]], [[მცხეთა]]), აღმოსავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1660]]-[[1676]] წლებში, ქაიხოსრო მუხრანბატონის ძე. იყო ქართლის მეფის ვახტანგ V-ის პოლიტიკის მიმდევარი. ენერგიულად იბრძოდა ტყვეებით მოვაჭრე თავადთა წინააღმდეგ. მუსლიმანურ წეს-ჩვეულებათა საპირისპიროდ ცდილობდა ქართული ქრისტიანული ჩვეულებების აღდგენას. [[1664]] წელს თბილისელი ვაჭრისაგან შეიძინა სამცხიდან ჩამოტანილი ანჩის ხატი და თბილისის ანჩისხატის ეკლესიაში დაასვენა. მანვე შეაკეთა და განაახლა ანჩისხატის ეკლესია, [[1675]] წელს ააგო ახალი სამრეკლო. სვეტიცხოვლის საკათედრო ტაძრისთვის ნასყიდობით შეიძინა სახნავ-სათესი მიწები და რამდენიმე კომლი გლეხი.
 
 
 [[კატეგორია:ქართველები]]
