*Empty MediaWiki Message*

--- a/Air_(ჯგუფი).mw
+++ b/Air_(ჯგუფი).mw
@@ -1,3 +1,9 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+||<small>ტერმინს "'''ეარ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეარ]]
+|}</small>
+
+
 [[სურათი:Airband.jpg|thumb|right|250px|ბენდის წევრები]] '''ეარ''' - ფრანგული მუსიკალური ბენდი, დაფუძნდა [[1995]] წელს და მისი წევრები არიან ნიკოლა გოდენი და ჟან-ბენუა დუნკელი. მათ პირველ ალბომს ‘’Moon Safari’’ (ნადირობა მთვარეზე) კრიტიკოსებმა უმაღლესი შეფასება მისცეს, რასაც მოჰყვა Premiers Symptômes (პირველი სიმპტომები), The Virgin Suicides (ქალწულთა თვითმკვლელობები), 10000Hz Legend, და Talkie Walkie.
 
 მიუხედავად იმისა, რომ ეარის მუსიკას ხშირად [[ელექტრონული მუსიკა|ელექტრონულს]] და [[ტრიპ-ჰოპი|ტრიპ-ჰოპს]] უწოდებენ და სამუსიკო მაღაზიებში მათ დისკებს შესაბამისად ამ განყოფილებებში იპოვით, ელექტრონული მუსიკის მათი ფორმა უფრო 1970-იანებში [[ჯარე, ჟან-მიშელ|ჟან-მიშელ ჯარესა]] და [[ვანჯელისი|ვანჯელისის]] [[სინთეზატორი|სინთეზატორის]] ხმების გავლენაა. ასევე აშკარად იგრძნობა [[ფსიქოდელიური როკი|ფსიქოდელიური როკის]] გავლენა, რომლის პიონერები [[პინკ ფლოიდი]] და [[კრაუტროკერს თენჯერინ დრიმი]] იყვნენ (თუმცა მათ პროდუქციაში შიგადაშიგ შესამჩნევია საცეკვაო მუსიკის სტილიც). ეარის მუსიკაში [[ჯაზი|ჯაზის]] გავლენაც ძლიერია და მათი იმპროვიზაციის უნარი აშკარა ხდება არენაზე ცოცხალი შესრულებისას. ბენდის დაფუძნებამდე ნიკოლა და ჯან-ბენუა ასრულებდნენ ბენდში [[ორინჯი]] ალექს გოფერთან, ხავიერ ჟამოსა და ეტიენ დე კრესისთან ერთად - ეს სახელები შემდგომში ხშირად ჩნდება ეარის რემიქსებშიც.
