--- a/ევროპა_(მრავალმნიშვნელოვანი).mw
+++ b/ევროპა_(მრავალმნიშვნელოვანი).mw
@@ -1,11 +1,9 @@
-
-
 ტერმინს '''ევროპა''' შეიძლება ჰქონდეს ერთ-ერთი შემდეგი მნიშვნელობათაგანი:
 
 
-* [[ევროპა]] - [[ქვეყნის ნაწილები|ქვეყნის ნაწილი]], [[აზია|აზიასთან]] ერთად ქმნის [[ევრაზია|ევრაზიის]] [[კონტინენტი|კონტინენტს]].
-* [[ევროპა (კუნძული)|ევროპა]] - [[კუნძული]] [[ინდოეთის ოკეანე|ინდოეთის ოკეანეში]].
-* [[ევროპა (თანამგზავრი)|ევროპა]] - [[იუპიტერი|იუპიტერის]] [[თანამგზავრი]].
+* [[ევროპა ]] - ქვეყნის ნაწილი, აზიასთან ერთად ქმნის ევრაზიის კონტინენტს.
+* [[ევროპა (კუნძული)|ევროპა]] - კუნძული ინდოეთის ოკეანეში.
+* [[ევროპა (თანამგზავრი)|ევროპა]] - იუპიტერის თანამგზავრი.
 
 
 {{მრავალმნიშვნელოვანი}}
