*Empty MediaWiki Message*

--- a/ევროპა.mw
+++ b/ევროპა.mw
@@ -1,7 +1,8 @@
 {|border=0 cellpadding=10 width=100%
-|- bgcolor=silver
-|ტერმინს '''ევროპა''' აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ევროპა (არაორაზროვნება)]]
-|}
+|- bgcolor=whitesmoke
+||<small>ტერმინს "'''ევროპა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ევროპა (არაორაზროვნება)]]
+|}</small>
+
 
 
 [[ევროპა]] - ქვეყნის ნაწილი, აზიასთან ერთად ქმნის [[ევრაზია|ევრაზიის]] კონტინენტს. მათ შორის საზღვრის ხაზის თაობაზე იხილეთ სტატია: [[ევროპა-აზიის საზღვარი]].
