*Empty MediaWiki Message*

--- a/ეზრა_(X_საუკუნე).mw
+++ b/ეზრა_(X_საუკუნე).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეზრა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეზრა]]
+|}</small>
+
 '''ეზრა''', X საუკუნის [[ქართველები|ქართველი]] ჰიმნოგრაფი. [[მიქელ მოდრეკელი|მიქელ მოდრეკელის]] [[ჰიმნოგრაფია|ჰიმნოგრაფიულ]] კრებულში დაცულია ექვთიმე პალესტინელის სადიდებლად შეთხზული მისი საგალობელი, რომლის კიდურწერილობა ასე იკითხება: "ეზრა. ქრისტე, ადიდე საურმაგ და ძეჲ მისი მირვან, ამენ". შესაძლებელია, იგი იყოს [[გრიგოლ ხანძთელი|გრიგოლ ხანძთელის]] "ცხოვრებაში" მოხსენიებული "ეზრა, ღირსი ანჩელი მამამთავარი, ეპისკოპოსი, დიდებულთა აზნაურთა დაფანჩულთა შვილი".
 
 
