*Empty MediaWiki Message*

--- a/ელიზბარ_ქსნის_ერისთავი_(XVI_საუკუნე).mw
+++ b/ელიზბარ_ქსნის_ერისთავი_(XVI_საუკუნე).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ელიზბარ ქსნის ერისთავი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ელიზბარ ქსნის ერისთავი]]
+|}</small>
+
 '''ელიზბარ ქსნის ერისთავი''', ქსნის [[ერისთავი]] XVI საუკუნის 60-70-იან წლებში. [[1569]], როდესაც [[ქართლის სამეფო|ქართლის]] მეფე [[სიმონ I]] ირანელების წინააღმდეგ ფარცხისთან ბრძოლაში დამარცხდა და ტყვედ ჩავარდა, ელიზბარ ქსნის ერისთავი და [[ამილახვარი, ბარძიმ|ბარძიმ ამილახვარი]] კავთისხევს მდგომ დედოფალს თავს დაესხნენ და მისი ქონება ხელთ იგდეს. როდესაც ქართლს [[ოსმალები]] შემოესივნენ [[მუსტაფა ლალა-ფაშა|მუსტაფა ლალა-ფაშას]] მეთაურობით, ელიზბარ ქსნის ერისთავი დაპყრობელს მიეგება. [[1578]] სიმონ I-ის ტყვეობიდან დაბრუნების შემდეგ ელიზბარ ქსნის ერისთავმა მიტაცებული ქონება უკან დაუბრუნა მეფეს და შენდობა თხოვა. მეფემ შეიწყალა და მხოლოდ მამულების ნაწილი ჩამოართვა.
 
 
