*Empty MediaWiki Message*

--- a/ელიზბარ_ქსნის_ერისთავი_(XVII_საუკუნე).mw
+++ b/ელიზბარ_ქსნის_ერისთავი_(XVII_საუკუნე).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ელიზბარ ქსნის ერისთავი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ელიზბარ ქსნის ერისთავი]]
+|}</small>
+
 '''ელიზბარ ქსნის ერისთავი''' ( †  [[18 სექტემბერი]], [[1662]]), [[კახეთის აჯანყება 1659|კახეთის აჯანყების]] ([[1659]]) ერთ-ერთი მეთაური.
 
 აჯანყების ჩაქრობის შემდეგ ირანის შაჰმა დასასჯელად თურქმანულ ტომებს გადასცა, რომლებმაც იგი წამებით მოკლეს. რამდენიმე ხნის შემდეგ კახეთის ელიზბარ ქსნის ერისთავი ჩამოასვენეს და იკორთაში, ერისთავების საგვარეულო მონასტერში დაკრძალეს. ქართულმა ეკლესიამ ელიზბარ ქსნის ერისთავი ისევე, როგორც აჯანყების სხვა წამებული გმირები, ქმინდანად შერაცხა.
