*Empty MediaWiki Message*

--- a/ევროპა.mw
+++ b/ევროპა.mw
@@ -1,6 +1,6 @@
 {|border=0 cellpadding=10 width=100%
 |- bgcolor=whitesmoke
-||<small>ტერმინს "'''ევროპა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ევროპა (არაორაზროვნება)]]
+||<small>ტერმინს "'''ევროპა'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ევროპა (მრავალმნიშვნელოვანი)]]
 |}</small>
 
 
